--- a/src/style.css
+++ b/src/style.css
@@ -107,15 +107,19 @@
     text-align: center;
     border-radius: 4px;
     position: relative;
+    background-color: #225383;
 }
 .child-image{
     width: 140px;
     position: relative;
 }
 .child-image img{
-    width: 30px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     border-radius: 6px;
   background-color :#000;
   z-index: 1;
+}
+.child-details h3{
+    color: #e4e4e4;
 }
