--- a/src/Project_2/button.css
+++ b/src/Project_2/button.css
@@ -1,3 +1,9 @@
+.container {
+   display: grid;
+   justify-content: center;
+   align-items: center;
+}
+
 .button-73 {
   appearance: none;
   background-color: #FFFFFF;
@@ -9,8 +15,8 @@
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system,sans-serif;
-  font-size: 1.2rem;
-  font-weight: 700;
+  font-size: 1 rem;
+  font-weight: 600;
   letter-spacing: -.24px;
   margin: 0;
   outline: none;
